<resources>
    <string name="app_name">Anything</string>
    <string name="app_name_uppercase">ANYTHING</string>
    <string name="onboarding_title_message">If you\'re thinking about\nwhat to eat now,\nask anyting!</string>
    <string name="onboarding1_title_message">When the menu doesn\’t\ncome to mind,\nPlease let me know\nas below example!</string>
    <string name="onboarding2_title_message">Let\’s look at the\nrecommended food,\nI can get another\nrecommendation!</string>
    <string name="onboarding3_title_message">3 food recommendations\na day you can get it!</string>
    <string name="onboarding_sample_answer1">Please recommend a noodle dish\nthat\'s good to eat in hot weather!</string>
    <string name="onboarding_sample_answer2">Please recommend food with protein,\nnot meat!</string>
    <string name="start">START</string>
    <string name="home_main_title">Glad to see you:)\n I\'ll help you with\ntoday\'s fun meal!</string>
    <string name="my">MY</string>
    <string name="others">OTHERS</string>
    <string name="menu_recommendations">Menu recommendations</string>
    <string name="recommendation_question1">Please choose between breakfast, lunch, and dinner, midnight meal!</string>
    <string name="recommendation_question2">Please choose your favorite food type!</string>
    <string name="recommendation_question3">Please choose the type of food you don\'t like!</string>
    <string name="recommendation_question4">Is there anything you would like to exclude from the 10 menus you recommended recently?</string>
    <string name="recommendation_question5">Please let me know what you want additionally!</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="skip">SKIP</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="midnight_meal">Midnight_meal</string>
    <string name="korean">Korean</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="western">Western</string>
    <string name="asian">Asian</string>
    <string name="mexican">Mexican</string>
    <string name="detail_question_subtitle">* The more detailed it is, the better</string>
    <string name="detail_edittext_hint">Ex. Since I\'m allergic to nuts, please recommend anything other than those with nuts!</string>
    <string name="go_home">GO HOME</string>
    <string name="result_title_format">Anyting\'s recommendation\nis %s!</string>
    <string name="empty_message">I don\'t have any recommendations yet!</string>
    <string name="empty_recently_food">I don\'t have any recent recommendations,\nso please press the next button!</string>
    <string name="confirm">CONFIRM</string>
    <string name="dialog_one_more_message_title">1 recommendation left</string>
    <string name="dialog_one_more_messsage_subtitle">You can get one more recommendation!</string>
    <string name="dialog_no_more_message_title">There are no more recommendations left</string>
    <string name="ialog_no_more_message_subtitle">I used up today\'s recommendations, so I can\'t recommend any more</string>
</resources>