<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.ows.gemini.anything.data.type.FoodType" />

        <variable
            name="viewModel"
            type="com.ows.gemini.anything.presentation.recommendations.RecommendationsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dune">

        <TextView
            android:id="@+id/tv_korean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_all_round_corner_12dp"
            android:backgroundTint="@color/carbongrey"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:onClick="@{()->viewModel.selectFoodType(FoodType.Korean)}"
            android:text="@string/korean"
            android:textColor="@color/sunshade"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/tv_chinese"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_chinese"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_all_round_corner_12dp"
            android:backgroundTint="@color/carbongrey"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:text="@string/chinese"
            android:textColor="@color/sunshade"
            android:textSize="18sp"
            android:onClick="@{()->viewModel.selectFoodType(FoodType.Chinese)}"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/tv_japanese"
            app:layout_constraintStart_toEndOf="@id/tv_korean"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_japanese"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{()->viewModel.selectFoodType(FoodType.Japanese)}"
            android:background="@drawable/bg_all_round_corner_12dp"
            android:backgroundTint="@color/carbongrey"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:text="@string/japanese"
            android:textColor="@color/sunshade"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_chinese"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_western"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_all_round_corner_12dp"
            android:backgroundTint="@color/carbongrey"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:text="@string/western"
            android:textColor="@color/sunshade"
            android:textSize="18sp"
            android:onClick="@{()->viewModel.selectFoodType(FoodType.Western)}"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/tv_asian"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_korean" />

        <TextView
            android:id="@+id/tv_asian"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:onClick="@{()->viewModel.selectFoodType(FoodType.Asian)}"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_all_round_corner_12dp"
            android:backgroundTint="@color/carbongrey"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:text="@string/asian"
            android:textColor="@color/sunshade"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/tv_mexican"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv_western"
            app:layout_constraintTop_toBottomOf="@id/tv_chinese" />

        <TextView
            android:id="@+id/tv_mexican"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_all_round_corner_12dp"
            android:backgroundTint="@color/carbongrey"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:text="@string/mexican"
            android:textColor="@color/sunshade"
            android:onClick="@{()->viewModel.selectFoodType(FoodType.Mexican)}"
            android:textSize="18sp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/tv_asian"
            app:layout_constraintTop_toBottomOf="@id/tv_japanese" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>