<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dune">

        <TextView
            android:id="@+id/tv_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/bg_all_round_corner"
            android:backgroundTint="@color/sunshade"
            android:fontFamily="@font/carterone_regular"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="STEP1"
            android:textColor="@color/dune"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="54dp"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/carterone_regular"
            android:textAlignment="center"
            android:textColor="@color/sunshade"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="When the menu doesn’t\ncome to mind,\nPlease let me know\nas below example!" />

        <View
            android:id="@+id/v_top_blank"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tv_first_step_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="332" />

        <ImageView
            android:id="@+id/iv_left_introduce"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="-44.5dp"
            android:layout_marginTop="-32dp"
            android:src="@drawable/left_highlight_bling_line"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/tv_introduce"
            app:layout_constraintTop_toTopOf="@id/tv_introduce" />

        <TextView
            android:id="@+id/tv_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_all_round_corner"
            android:backgroundTint="@color/sunshade"
            android:fontFamily="@font/carterone_regular"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/menu_recommendations"
            android:textColor="@color/dune"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/iv_right_introduce"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="-43.5dp"
            android:layout_marginBottom="-32dp"
            android:src="@drawable/right_highlight_bling_line"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_introduce"
            app:layout_constraintEnd_toEndOf="@id/tv_introduce" />

        <TextView
            android:id="@+id/tv_first_step_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_tv_left_message_bubble"
            android:fontFamily="@font/noto_sans"
            android:paddingHorizontal="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:text="@string/onboarding_sample_answer1"
            android:textColor="@color/bleachwhite"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tv_second_step_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_top_blank"
            app:layout_constraintVertical_weight="82"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_second_step_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_tv_right_message_bubble"
            android:fontFamily="@font/noto_sans"
            android:paddingHorizontal="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="30dp"
            android:text="@string/onboarding_sample_answer2"
            android:textColor="@color/bleachwhite"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/v_bottom_blank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_first_step_answer"
            app:layout_constraintVertical_weight="82"
            tools:visibility="visible" />

        <View
            android:id="@+id/v_bottom_blank"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_second_step_answer"
            app:layout_constraintVertical_weight="96" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>